fixed dark mode -  V3

--- a/src/App.css
+++ b/src/App.css
@@ -20,3 +20,6 @@
   transform: scale(0.75);
 }
 
+#visual {
+  transition: all 0.65s ease-in-out;
+}
